--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>SeleniumFramework</groupId>
     <artifactId>SeleniumFramework</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
