--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,2 @@
 chooseBrowser = chrome
-baseURL = https://www.testandquiz.com/selenium/testing.html
+baseURL = http://automationpractice.com/index.php
