--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,2 @@
-chooseBrowser = chrome
-baseURL = http://automationpractice.com/index.php
+browser = chrome
+url.base = http://automationpractice.com/index.php
