--- a/pom.xml
+++ b/pom.xml
@@ -64,5 +64,11 @@
             <version>7.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.aeonbits.owner</groupId>
+            <artifactId>owner</artifactId>
+            <version>1.0.12</version>
+        </dependency>
+
     </dependencies>
 </project>
