--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,19 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <suiteXmlFile>src/main/resources/testing.xml</suiteXmlFile>
-        <aspectj.version>1.9.6</aspectj.version>
-        <allure.version>2.19.0</allure.version>
+        <aspectj.version>1.9.19</aspectj.version>
+        <allure.version>2.23.0</allure.version>
         <allure-maven.version>2.11.2</allure-maven.version>
         <allure-environment-writer.version>1.0.0</allure-environment-writer.version>
         <owner.version>1.0.12</owner.version>
-        <datafaker.version>1.6.0</datafaker.version>
+        <datafaker.version>2.0.1</datafaker.version>
+        <webdriver-manager.version>5.4.0</webdriver-manager.version>
+        <selenium-java.version>4.10.0</selenium-java.version>
+        <allure-testng.version>2.23.0</allure-testng.version>
+        <testng.version>7.8.0</testng.version>
+        <rest-assured.version>5.3.1</rest-assured.version>
+        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 
     </properties>
     <build>
@@ -42,50 +49,48 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.3.0</version>
+            <version>${webdriver-manager.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.5.0</version>
+            <version>${selenium-java.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
+            <version>${maven-surefire-plugin.version}</version>
             <type>maven-plugin</type>
         </dependency>
 
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>5.2.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>json-path</artifactId>
-            <version>5.2.0</version>
+            <version>${rest-assured.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.5</version>
+            <version>${testng.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
-            <version>2.19.0</version>
+            <version>${allure-testng.version}</version>
         </dependency>
 
         <dependency>
@@ -98,7 +103,7 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-maven</artifactId>
-            <version>2.8</version>
+            <version>${allure-maven.version}</version>
         </dependency>
 
         <dependency>
@@ -138,7 +143,7 @@
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.8</version>
+                <version>${allure-maven.version}</version>
             </plugin>
         </plugins>
     </reporting>
