--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,3 @@
 browser=chrome
-url.base=http://automationpractice.com/index.php
+url.base=https://parabank.parasoft.com/parabank/admin.htm
 api.url.base = https://reqres.in/
