--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <selenium-java.version>4.14.1</selenium-java.version>
         <allure-testng.version>2.23.0</allure-testng.version>
         <testng.version>7.8.0</testng.version>
+        <log4j.version>2.21.0</log4j.version>
         <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 
@@ -126,13 +127,13 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.21.0</version>
+            <version>${log4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.21.0</version>
+            <version>${log4j.version}</version>
         </dependency>
 
         <dependency>
