removed webdriver manager

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <suiteXmlFile>src/main/resources/testing.xml</suiteXmlFile>
+        <suiteXmlFile>TestNG.xml</suiteXmlFile>
         <aspectj.version>1.9.21</aspectj.version>
         <allure.version>2.25.0</allure.version>
         <allure-maven.version>2.11.2</allure-maven.version>
