added additional web utility methods

--- a/src/main/resources/configurations.properties
+++ b/src/main/resources/configurations.properties
@@ -1,4 +1,7 @@
 browser=chrome
-url.base=https://www.saucedemo.com/
+url.base=https://demoqa.com/alerts
 api.url.base = https://dummy.restapiexample.com/api/v1/
 api.url.base.second = https://reqres.in/
+
+demoqa.buttons=https://demoqa.com/buttons
+demo= https://www.saucedemo.com/
