--- a/src/main/resources/configurations.properties
+++ b/src/main/resources/configurations.properties
@@ -1,5 +1,5 @@
 browser=chrome
-url.base=https://demoqa.com/alerts
+url.base=https://www.saucedemo.com/
 api.url.base = https://dummy.restapiexample.com/api/v1/
 api.url.base.second = https://reqres.in/
 
